# honor-code

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260510_0001_initial_users_and_sessions.py
apps/api/app/: main.py
apps/api/app/auth/: config.py  deps.py  oauth.py  origins.py  router.py  sessions.py
apps/api/app/db/: session.py
apps/api/app/db/models/: __init__.py  session.py  user.py
apps/api/app/security/: token_crypto.py
apps/api/tests/: conftest.py  test_cors.py  test_next_validator.py  test_origins.py  test_startup_validation.py
apps/web/: README.md  angular.json  package.json  vercel.json
apps/web/src/: index.html
apps/web/src/app/: app.css  app.html  app.spec.ts  app.ts  auth.service.ts
apps/web/src/environments/: environment.prod.ts  environment.ts
